# Texonis-LLM

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/dev/tocraft/texonis_llm_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: texonis_llm.dart  texonis_llm_bindings_generated.dart  texonis_llm_bindings_wrapper.dart
lib/params/: context_params.dart  model_params.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt
windows/: CMakeLists.txt
